--- a/News.html
+++ b/News.html
@@ -29,6 +29,15 @@
   <h2>Sự kiện</h2>
 <section id="activites" data-aos="fade-up">
 <table style="margin: 0 auto; text-align: center; border-color: #ff6600;">
+    <tr>
+    <td>
+      <a href="Event/Ngay_Quoc_Te_Tinh_Nguyen_2025.html" style="text-decoration: none;">
+      <img src="Image/News/Ho_Tro_K19_Nhap_Hoc_5.jpg" alt="Ngày Quốc Tế Tình Nguyện 05/12" style="max-width: 150px; height: 100%; max-height: 150px; display: block; margin-left: auto; margin-right: auto;"><br>
+    CHÀO MỪNG NGÀY QUỐC TẾ TÌNH NGUYỆN – 05/12
+    <p style="font-size: 12px;"><b>Ngày đăng: 05/12/2025</b></p>
+  </a>
+  </td>
+  </tr>
   <tr>
     <td>
       <a href="Event/Giot_Hong_UNETI_2025_Lan_2.html" style="text-decoration: none;">
