--- a/Event/Giot_Hong_UNETI_2025_Lan_2.html
+++ b/Event/Giot_Hong_UNETI_2025_Lan_2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HỖ TRỢ CÔNG TÁC CHUẨN BỊ HỘI HIẾN MÁU TÌNH NGUYỆN "GIỌI HỒNG UNETI" 2025 LẦN 2 TẠI 2 TỈNH THÀNH | CLB Tuyên truyền văn hoá học đường sinh viên UNETI</title>
+  <title>RECAP | HỖ TRỢ HỘI HIẾN MÁU TÌNH NGUYỆN "GIỌI HỒNG UNETI" 2025 LẦN 2 TẠI 2 TỈNH THÀNH | CLB Tuyên truyền văn hoá học đường sinh viên UNETI</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../style.css">
   <link rel="icon" type="image/png" href="../Image/SCC-Logo.png">
@@ -20,21 +20,20 @@
     <li><a href="../News.html">Tin tức</a></li>
     <li><a href="../Member.html">Thành viên</a></li>
     <li><a href="../VHHD.html">Văn hoá học đường sinh viên</a></li>
-    <li><a href="">Liên hệ</a></li>
+    <li><a href="../Contact.html">Liên hệ</a></li>
     <li><a href="../SignUpToSCC.html">Đăng kí tham gia</a></li>
   </ul>
 </nav>
 <p style="text-align: center;"><a href="../index.html" style="color: black;">Trang chủ</a> >> <a href="../News.html" style="color: black;">Tin tức</a></p>
 <header>
   <h1 style="text-align:center;">
-    RECAP | HỖ TRỢ CÔNG TÁC CHUẨN BỊ HỘI HIẾN MÁU TÌNH NGUYỆN "GIỌI HỒNG UNETI" 2025 LẦN 2 TẠI 2 TỈNH THÀNH
+    RECAP | HỖ TRỢ HỘI HIẾN MÁU TÌNH NGUYỆN "GIỌI HỒNG UNETI" 2025 LẦN 2 TẠI 2 TỈNH THÀNH
   </h1>
 </header>
 
 <section style="text-align:center; ">
     <h2>Ngày 05/12/2025 tại cơ sở Nam Định - Ninh Bình</h2>
   <p style="margin:0 50px;">
-    Công tác chuẩn bị cho ngày hội hiến máu 05/12/2025 đã hoàn tất!<br>
     Các thành viên SCC cùng các CLB khác như UB (Đội Thanh niên vận động hiến máu UNETI), UVND (Đội Sinh viên tình nguyện tại Nam Định)... đã tham gia hỗ trợ công tác chuẩn bị và đồng hành cùng chương trình để có hội hiến máu thành công rực rỡ.
   </p>
   <br>
@@ -43,20 +42,43 @@
   <img src="../Image/News/UB_2025_Lan_2_NB_3.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
   <img src="../Image/News/UB_2025_Lan_2_NB_4.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
 <br><br>
-  <p style="margin:0 50px;">
-    Sáng cùng ngày, chương trình hiến máu Giọt Hồng UNETI 2025 – Lần 2 đã chính thức mở điểm tiếp nhận tại Ninh Bình. Các bạn sinh viên có mặt đúng khung giờ để thực hiện quy trình đăng ký – khám sàng lọc – hiến máu nhé!<br>
-  </p>
-  <p style="margin:0 50px; text-align: left;">
-    🕗 <b>Thời gian mở điểm:</b> Từ 07h30’ (buổi sáng cùng ngày)<br>
-    📍 <b>Địa điểm:</b> 353 Trần Hưng Đạo, Phường Nam Định, Tỉnh Ninh Bình<br>
-    💡 <b>Lưu ý nhanh:</b><br>
-    – Mang theo CMND/CCCD hoặc thẻ SV<br>
-    – Ăn nhẹ trước khi hiến<br>
-    – Không sử dụng rượu bia trước 12 giờ<br>
-    ❤️🩸Mời các bạn sinh viên đến đúng giờ để đảm bảo quy trình diễn ra nhanh và thuận lợi. Cảm ơn tinh thần thiện nguyện của tuổi trẻ UNETI! 
-  </p>
-  </p>
-<br><h2 style="text-align:center;">Hãy chờ đón tại cơ sở Minh Khai và Lĩnh Nam - Hà Nội!</h2>
+  <p style="margin:0 50px; text-align: justify;">
+    🌟Trong cái se lạnh đầu đông và bầu không khí ấm áp của sự sẻ chia, chương trình hiến máu “Giọt Hồng UNETI 2025 – Lần 2” đã diễn ra tại 353 Trần Hưng Đạo, TP. Nam Định – Tỉnh Ninh Bình với thật nhiều cảm xúc và lan tỏa tinh thần nhân ái mạnh mẽ.<br>
+    🌈Với sự hỗ trợ nhiệt tình của các bạn tình nguyện viên UNETI cùng với 𝐒𝐂𝐂 trong công tác đón tiếp – hướng dẫn – chăm sóc sau hiến máu đã diễn ra suôn sẻ, an toàn và đầy chuyên nghiệp. Các bạn đã luôn túc trực tại từng khu vực, đồng hành cùng người hiến máu để mang lại trải nghiệm tốt nhất cho mọi người. <br>
+    💗CLB Văn hoá học đường sinh viên xin gửi lời cảm ơn chân thành đến tất cả những người đã tham gia, hỗ trợ và lan toả tinh thần nhân ái của Giọt Hồng UNETI. Sự hiện diện của mọi người đã làm nên thành công cho chương trình hôm nay!
+  </p><br>
+  <img src="../Image/News/UB_2025_Lan_2_NB_5.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_6.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_7.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_8.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_8.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_9.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_10.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_11.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_12.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_13.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_14.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_15.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_16.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_17.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_18.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_19.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_20.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_21.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_22.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_23.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_24.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_25.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_26.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_27.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_28.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_29.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_30.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_31.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_32.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+  <img src="../Image/News/UB_2025_Lan_2_NB_33.jpg" alt="1" style="width: 100%; max-width: 500px; height: auto;">
+
+<br><br><h2 style="text-align:center;">Hãy chờ đón tại cơ sở Minh Khai và Lĩnh Nam - Hà Nội!</h2>
   <p style="margin:0 50px;">
     💙 Đăng ký tại: <a href="https://urlvn.net/GiotHongUneti2025Lan2" target="_blank">https://urlvn.net/GiotHongUneti2025Lan2</a>
   </p>
@@ -75,7 +97,7 @@
   </p>
   <p>
     <img src="../Image/Facebook.png" style="width:20px; vertical-align:middle;">
-    Facebook Đội Thanh niên vận động hiến máu:
+    Facebook Đội Thanh niên vận động hiến máu UNETI:
     <a href="https://www.facebook.com/UNETIBLOOD" target="_blank">https://www.facebook.com/UNETIBLOOD</a>
   </p>
   <p>
@@ -99,5 +121,3 @@
 
 </body>
 </html>
-
-
