--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
     </a>
   </tr>
   <tr>
-    <td>RECAP | BUỔI HỌP CLB ĐẦU THÁNG 12 NĂM 2025 VÀ TỔ CHỨC SINH NHẬT THÀNH VIÊN THÁNG 12</td>
-  </tr>
+    <td><a href="Event/Sinh_hoat_dau_T12_2025.html" style="text-decoration: none;">RECAP | BUỔI HỌP CLB ĐẦU THÁNG 12 NĂM 2025 VÀ TỔ CHỨC SINH NHẬT THÀNH VIÊN THÁNG 12</td>
+    </a>
+    </tr>
   <tr>
     <td>RECAP | HỖ TRỢ HỘI THẢO "PHỔ BIẾN, TUYÊN TRUYỀN NÓI TRUYỆN CHUYÊN ĐỀ VỀ KIẾN THỨC PHÁP LUẬT, AN NINH TRẬT TỰ, TỆ NẠN XÃ HỘI"</td>
   </tr>
