--- a/News.html
+++ b/News.html
@@ -58,9 +58,12 @@
   </td>
   </tr>
   <tr>
-    <td><img src="Image/News/Recap_2025_12_02_1.jpg" alt="RECAP ngày 02/11/2025" style="max-width: 150px; max-width: 150px; height: 100%; max-height: 150px; display: block; margin-left: auto; margin-right: auto;"><br>
+    <td>
+    <a href="Event/Sinh_hoat_dau_T12_2025.html" style="text-decoration: none;">
+    <img src="Image/News/Recap_2025_12_02_1.jpg" alt="RECAP ngày 02/11/2025" style="max-width: 150px; max-width: 150px; height: 100%; max-height: 150px; display: block; margin-left: auto; margin-right: auto;"><br>
     RECAP | BUỔI HỌP CLB ĐẦU THÁNG 12 NĂM 2025 VÀ TỔ CHỨC SINH NHẬT THÀNH VIÊN THÁNG 12<br>
     <p style="font-size: 12px;"><b>Ngày đăng: 03/12/2025</b></p>
+  </a>
   </td>
   </tr>
   <tr>
