--- a/VHHD.html
+++ b/VHHD.html
@@ -62,7 +62,7 @@
   <figure>
     <center>
     <img src="Image\SCC-Thang-May.png" alt="SCC trực thang máy" style="width: 100%; height: auto; max-width: 600px; vertical-align: center;">
-    <figcaption><em>[Hình ảnh] Đội truyền thông Văn hóa học đường đi trực thang máy ở toà nhà HA-10 tại ơ sở Lĩnh Nam - Hà Nội</em></figcaption>
+    <figcaption><em>[Hình ảnh] Đội truyền thông Văn hóa học đường đi trực thang máy ở toà nhà HA-10 tại cơ sở Lĩnh Nam - Hà Nội</em></figcaption>
     </center>
   </figure><br> 
   <figure>
@@ -81,43 +81,43 @@
   <figure>
     <center>
     <img src="Image\SCC-Support-K19-1.jpg" alt="SCC hỗ trợ tân sinh viên K19" style="width: 100%; height: auto; max-width: 600px; vertical-align: center;">
-    <figcaption><em>[Hình ảnh] Đội tình viên của CLB hỗ trợ sinh viên nhập học cho Tân sinh viên Khóa 19 tại cơ sở Lĩnh Nam - Hà Nội</em></figcaption>
+    <figcaption><em>[Hình ảnh] Đội tình nguyện viên của CLB hỗ trợ sinh viên nhập học cho Tân sinh viên Khóa 19 tại cơ sở Lĩnh Nam - Hà Nội</em></figcaption>
     </center>
   </figure><br>
   <figure>
     <center>
     <img src="Image\SCC-Support-K19-2.jpg" alt="SCC hỗ trợ tân sinh viên K19" style="width: 100%; height: auto; max-width: 600px; vertical-align: center;">
-    <figcaption><em>[Hình ảnh] Đội tình viên của CLB hỗ trợ sinh viên nhập học cho Tân sinh viên Khóa 19 tại cơ sở Lĩnh Nam - Hà Nội</em></figcaption>
+    <figcaption><em>[Hình ảnh] Đội tình nguyện viên của CLB hỗ trợ sinh viên nhập học cho Tân sinh viên Khóa 19 tại cơ sở Lĩnh Nam - Hà Nội</em></figcaption>
     </center>
   </figure><br> 
   <figure>
     <center>
     <img src="Image\SCC-Support-K19-3.jpg" alt="SCC hỗ trợ tân sinh viên K19" style="width: 100%; height: auto; max-width: 600px; vertical-align: center;">
-    <figcaption><em>[Hình ảnh] Đội tình viên của CLB hỗ trợ sinh viên nhập học cho Tân sinh viên Khóa 19 tại cơ sở Lĩnh Nam - Hà Nội</em></figcaption>
+    <figcaption><em>[Hình ảnh] Đội tình nguyện viên của CLB hỗ trợ sinh viên nhập học cho Tân sinh viên Khóa 19 tại cơ sở Lĩnh Nam - Hà Nội</em></figcaption>
     </center>
   </figure><br>  
   <figure>
     <center>
     <img src="Image\SCC-Support-K19-4.jpg" alt="SCC chào đón thành viên K19" style="width: 100%; height: auto; max-width: 600px; vertical-align: center;">
-    <figcaption><em>[Hình ảnh] Đội tình viên của CLB hỗ trợ sinh viên nhập học và mở gian hành đăng kí thành viên cho Tân sinh viên Khóa 19 tại cơ sở Nam Định - Ninh Bình</em></figcaption>
+    <figcaption><em>[Hình ảnh] Đội tình nguyện viên của CLB hỗ trợ sinh viên nhập học và mở gian hành đăng kí thành viên cho Tân sinh viên Khóa 19 tại cơ sở Nam Định - Ninh Bình</em></figcaption>
     </center>
   </figure><br>  
   <figure>
     <center>
     <img src="Image\SCC-Support-K19-5.jpg" alt="SCC chào đón thành viên K19" style="width: 100%; height: auto; max-width: 600px; vertical-align: center;">
-    <figcaption><em>[Hình ảnh] Đội tình viên của CLB hỗ trợ sinh viên nhập học và mở gian hành đăng kí thành viên cho Tân sinh viên Khóa 19 tại cơ sở Nam Định - Ninh Bình</em></figcaption>
+    <figcaption><em>[Hình ảnh] Đội tình nguyện viên của CLB hỗ trợ sinh viên nhập học và mở gian hành đăng kí thành viên cho Tân sinh viên Khóa 19 tại cơ sở Nam Định - Ninh Bình</em></figcaption>
     </center>
   </figure><br>  
   <figure>
     <center>
     <img src="Image\SCC-Support-Ho-So-K15-1.jpg" alt="SCC hỗ trợ hồ sơ K15" style="width: 100%; height: auto; max-width: 600px; vertical-align: center;">
-    <figcaption><em>[Hình ảnh] Đội tình viên của CLB hỗ trợ kiểm tra và trả hồ sơ cho anh chị sinh viên Khoá 15</em></figcaption>
+    <figcaption><em>[Hình ảnh] Đội tình nguyện viên của CLB hỗ trợ kiểm tra và trả hồ sơ cho anh chị sinh viên Khoá 15</em></figcaption>
     </center>
   </figure><br>  
   <figure>
     <center>
     <img src="Image\SCC-Support-Ho-So-K15-2.jpg" alt="SCC hỗ trợ hồ sơ K15" style="width: 100%; height: auto; max-width: 600px; vertical-align: center;">
-    <figcaption><em>[Hình ảnh] Đội tình viên của CLB hỗ trợ kiểm tra và trả hồ sơ cho anh chị sinh viên Khoá 15</em></figcaption>
+    <figcaption><em>[Hình ảnh] Đội tình nguyện viên của CLB hỗ trợ kiểm tra và trả hồ sơ cho anh chị sinh viên Khoá 15</em></figcaption>
     </center>
   </figure><br>  
   <figure>
@@ -146,4 +146,3 @@ Tiktok: <a href="https://tiktok.com/@uneti.clb.scc" target="_blank">https://tikt
 </body>
 <script src="script.js"></script>
 </html>
-
