--- a/index.html
+++ b/index.html
@@ -110,23 +110,6 @@
   <h2>Thông báo CLB</h2>
     <div class="activites">
       <div class="announcements-card">
-        <h3>📢 THÔNG BÁO HỖ TRỢ ĐẠI HỘI CÔNG ĐOÀN 📢</h3>
-        <p style="text-align: left;">
-            Các bạn trong SCC chú ý!<br>
-            Lịch hỗ trợ cụ thể:<br>
-            📅 Sáng Chủ nhật ngày 07/12/2025<br>
-            🕡 Thời gian tập trung: 6h tại P.101 Ha8 Lĩnh Nam.<br>
-            Lưu ý:<br>
-            - Trang phục: Áo 5S, đi dép quai hậu hoặc giày thể thao, đeo thẻ, NGHIÊM CẤM các trường hợp đi dép lê, dép cross, mang balo. Bạn nào chưa có áo đến sớm để đăng ký mượn áo 5S<br>
-            - Các bạn đăng ký tham gia sẽ được đề xuất lập danh sách cộng điểm rèn luyện cho học kì này!<br>
-            Cảm ơn các bạn rất nhiều!❤️</p>
-            <p><b>Bởi: Trần Thế Phú (Chủ nghiệm CLB)</b></p>
-            <p style="font-size: 12px;">Thời gian: 21:00 ngày 04/12/2025</p>
-        </p>
-      </div>
-    </div>
-    <div class="activites"></div>
-      <div class="announcements-card">
         <h3>⌛ THÔNG BÁO BẢO TRÌ TRANG WEBSITE CLB ⌛</h3>
         <p style="text-align: left;">
             Nội dung:<br>
@@ -137,7 +120,6 @@
             <p><b>Bởi: Trần Đặng Bình Minh (Nhà sáng lập website) và Trần Danh Quang (Ban Truyền Thông)</b></p>
             <p style="font-size: 12px;">Ngày bảo trì: 08/12/2025</p>
         </p>
-      </div>
     </div>
     </div>
 </section>
@@ -159,7 +141,13 @@
       RECAP | HỖ TRỢ HỘI HIẾN MÁU TÌNH NGUYỆN "GIỌI HỒNG UNETI" 2025 LẦN 2 TẠI NINH BÌNH
       </a>
     </td>
-    <td>CHÀO MỪNG ĐẠI HỘI CÔNG ĐOÀN TRƯỜNG ĐẠI HỌC KINH TẾ – KỸ THUẬT CÔNG NGHIỆP - CƠ SỞ HÀ NỘI, LẦN THỨ XII, NHIỆM KỲ 2025 - 2030 <a href="Event/Avatar_Dai_Hoi_Cong_Doan_HN_2025_2030.html">[Thay avatar tại đây]</a></td>
+    <td><a href="Event/VHHD_Tuan_1_T12_2025.html" style="text-decoration: none;">[1/12/2025-5/12/2025] ĐIỂM TIN KIỂM TRA, NHẮC NHỞ THỰC HIỆN TỐT VĂN HÓA HỌC ĐƯỜNG SINH VIÊN UNETI VÀ VĂN HÓA CÔNG SỞ UNETI
+    </a>
+    </td>
+  </tr>
+  <tr>
+    <td>CHÀO MỪNG ĐẠI HỘI CÔNG ĐOÀN TRƯỜNG ĐẠI HỌC KINH TẾ – KỸ THUẬT CÔNG NGHIỆP - CƠ SỞ HÀ NỘI, LẦN THỨ XII, NHIỆM KỲ 2025 - 2030</td>
+    </a>
   </tr>
   <tr>
     <td><a href="Event/Ngay_Quoc_Te_Tinh_Nguyen_2025.html" style="text-decoration: none;">CHÀO MỪNG NGÀY QUỐC TẾ TÌNH NGUYỆN – 05/12</td>
@@ -177,9 +165,6 @@
   </tr>
   <tr>
     <td>[24/11/2025-28/11/2025] ĐIỂM TIN KIỂM TRA, NHẮC NHỞ THỰC HIỆN TỐT VĂN HÓA HỌC ĐƯỜNG SINH VIÊN UNETI VÀ VĂN HÓA CÔNG SỞ UNETI</td>
-  </tr>
-  <tr>
-    <td>RECAP | HỖ TRỢ CHƯƠNG TRÌNH "CHUNG KẾT & BẾ MẠC HỘI THAO SINH VIÊN 2025 – CƠ SỞ NINH BÌNH"</td>
   </tr>
 </table>
   </div>
