--- a/Member.html
+++ b/Member.html
@@ -82,8 +82,10 @@
       </div>
       <div class="role-card">
         <h3>Trưởng ban Truyền thông</h3>
+        <a href="Member/Vu_Thi_Thu.html" style="text-decoration: none;">
           <img src="Image\MemberVuThiThu.jpg" alt="Vũ Thị Thu" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Vũ Thị Thu - Lớp DHKT17A9HN</p>
+        </a>
       </div>
       <div class="role-card">
         <h3>Phó ban Truyền Thông</h3>
