--- a/News.html
+++ b/News.html
@@ -85,9 +85,12 @@
   </td>
   </tr>
   <tr>
-    <td><img src="Image/News/Recap_Kien_thuc_PL_ANTT_TNXH_1.jpg" alt="RECAP hội thảo tuyên truyền ngày 02/11/2025" style="max-width: 150px; height: 100%; max-height: 150px; display: block; margin-left: auto; margin-right: auto;"><br>
+    <td>
+    <a href="Event/Kien_thuc_PL_ANTT_TNXH.html" style="text-decoration: none;">  
+    <img src="Image/News/Recap_Kien_thuc_PL_ANTT_TNXH_1.jpg" alt="RECAP hội thảo tuyên truyền ngày 02/11/2025" style="max-width: 150px; height: 100%; max-height: 150px; display: block; margin-left: auto; margin-right: auto;"><br>
     RECAP | HỖ TRỢ HỘI THẢO "PHỔ BIẾN, TUYÊN TRUYỀN NÓI TRUYỆN CHUYÊN ĐỀ VỀ KIẾN THỨC PHÁP LUẬT, AN NINH TRẬT TỰ, TỆ NẠN XÃ HỘI"<br>
     <p style="font-size: 12px;"><b>Ngày đăng: 02/12/2025</b></p>
+  </a>
   </td>
   </tr>
   <tr>
