--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
     </a>
     </tr>
   <tr>
-    <td>RECAP | HỖ TRỢ HỘI THẢO "PHỔ BIẾN, TUYÊN TRUYỀN NÓI TRUYỆN CHUYÊN ĐỀ VỀ KIẾN THỨC PHÁP LUẬT, AN NINH TRẬT TỰ, TỆ NẠN XÃ HỘI"</td>
+    <td><a href="Event/Kien_thuc_PL_ANTT_TNXH.html" style="text-decoration: none;">RECAP | HỖ TRỢ HỘI THẢO "PHỔ BIẾN, TUYÊN TRUYỀN NÓI TRUYỆN CHUYÊN ĐỀ VỀ KIẾN THỨC PHÁP LUẬT, AN NINH TRẬT TỰ, TỆ NẠN XÃ HỘI"
+      </a>
+    </td>
   </tr>
   <tr>
     <td>CÔNG BỐ KẾT QUẢ – CUỘC THI “Ý TƯỞNG SÁNG TẠO LAN TỎA VĂN HÓA HỌC ĐƯỜNG SINH VIÊN UNETI” – LẦN THỨ I, 2025</td>
