--- a/Event/VHHD_Tuan_1_T12_2025.html
+++ b/Event/VHHD_Tuan_1_T12_2025.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>[1/12/2025-5/12/2025] ĐIỂM TIN KIỂM TRA, NHẮC NHỞ THỰC HIỆN TỐT VĂN HÓA HỌC ĐƯỜNG SINH VIÊN UNETI VÀ VĂN HÓA CÔNG SỞ UNETI</title>
+  <title>[1/12/2025-5/12/2025] ĐIỂM TIN KIỂM TRA, NHẮC NHỞ THỰC HIỆN TỐT VĂN HÓA HỌC ĐƯỜNG SINH VIÊN UNETI VÀ VĂN HÓA CÔNG SỞ UNETI | CLB Tuyên truyền văn hoá học đường sinh viên UNETI</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../style.css">
   <link rel="icon" type="image/png" href="../Image/SCC-Logo.png">
