--- a/Member.html
+++ b/Member.html
@@ -33,27 +33,20 @@
 <section id="leader" data-aos="fade-up" style="margin: 0 50px;">
     <h2>Phó trưởng ban Gen 4 (2025 - 2026)</h2>
     <div class="role">
-      <div class="role-card">
-        <a href="Member/Tran_The_Phu.html" style="text-decoration: none;">
+        <a href="Member/Tran_The_Phu.html" style="text-decoration: none;" class="role-card">
         <h3>Chủ nghiệm</h3>
           <img src="Image\MemberTranThePhu.jpg" alt="Trần Thế Phú" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Trần Thế Phú - Lớp DHTD17A2HN</p>
-      </a>
-      </div>
-      <div class="role-card">
-        <a href="Member/Vu_Thi_Thu.html" style="text-decoration: none;">
+        <a href="Member/Vu_Thi_Thu.html" style="text-decoration: none;" class="role-card">
         <h3>Phó Chủ nghiệm (Hà Nội)</h3>
           <img src="Image\MemberVuThiThu.jpg" alt="Vũ Thị Thu" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Vũ Thị Thu - Lớp DHKT17A9HN</p>
       </a>
-      </div>
-      <div class="role-card">
-        <a href="Member/Pham_Thi_Ngoc_Lan.html" style="text-decoration: none;">
+        <a href="Member/Pham_Thi_Ngoc_Lan.html" style="text-decoration: none;" class="role-card">
         <h3>Phó Chủ nghiệm (Ninh Bình)</h3>
           <img src="Image\MemberPhamThiNgocLan.jpg" alt="Phạm Thị Ngọc Lan" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Phạm Thị Ngọc Lan - Lớp DHMA16A2ND</p>
       </a>
-      </div>
     </div>
   
     <div class="role">
@@ -80,13 +73,11 @@
           <img src="Image\MemberNguyenToChinh.jpg" alt="Nguyễn Tố Chinh" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Nguyễn Tố Chinh - Lớp DHTD17A2HN</p>
       </div>
-      <div class="role-card">
-        <a href="Member/Vu_Thi_Thu.html" style="text-decoration: none;">
+        <a href="Member/Vu_Thi_Thu.html" style="text-decoration: none; " class="role-card">
         <h3>Trưởng ban Truyền thông</h3>
           <img src="Image\MemberVuThiThu.jpg" alt="Vũ Thị Thu" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Vũ Thị Thu - Lớp DHKT17A9HN</p>
         </a>
-      </div>
       <div class="role-card">
         <h3>Phó ban Truyền Thông</h3>
           <img src="Image\MemberDuongThiKimAnh.jpg" alt="Dương Thị Kim Anh" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
@@ -108,6 +99,10 @@
     </div>
 
   </section>
+<section id="all_members" data-aos="fade-up" style="margin: 0 50px;">
+  <h2>Thành viên Gen 4 (2025 - 2026)</h2>
+  <p><a href="File/DS CLB SCC 2025-2026.pdf">Danh sách tất cả thành viên tại đây! (Bao gồm Thành viên Chính thức và Thử thách)</a></p>
+</section>
 
 <section id="leader" data-aos="fade-up" style="margin: 0 50px;">
     <h2>Cán bộ - Thầy Cô Phụ Trách</h2>
@@ -151,4 +146,3 @@ Tiktok: <a href="https://tiktok.com/@uneti.clb.scc" target="_blank">https://tikt
 </body>
 <script src="script.js"></script>
 </html>
-
