--- a/Member.html
+++ b/Member.html
@@ -51,7 +51,7 @@
   
     <div class="role">
       <div class="role-card">
-        <h3>Trưởng ban tuyên Truyền & Thực hiện VHHD</h3>
+        <h3>Trưởng ban Tuyên truyền & Thực hiện VHHD</h3>
           <img src="Image\MemberVuTheAnh.jpg" alt="Vũ Thế Anh" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Vũ Thế Anh - Lớp DHKM17A1HN</p>
       </div>
@@ -146,3 +146,4 @@ Tiktok: <a href="https://tiktok.com/@uneti.clb.scc" target="_blank">https://tikt
 </body>
 <script src="script.js"></script>
 </html>
+
