--- a/News.html
+++ b/News.html
@@ -119,7 +119,7 @@
   </tr>  
   <tr>
     <td>
-      <a href="Event/Cong_bo_Y_tuong_sang_tao_lan_toa_VHHD_2025_Lan_1.html"><img src="Image/News/Y_Tuong_Sang_Tao_Mua_1_Cong_Bo.jpg" alt="Ý TƯỞNG SÁNG TẠO LAN TỎA VĂN HÓA HỌC ĐƯỜNG SINH VIÊN UNETI" style="max-width: 150px; height: 100%; max-height: 150px; display: block; margin-left: auto; margin-right: auto;"><br>CÔNG BỐ KẾT QUẢ – CUỘC THI “Ý TƯỞNG SÁNG TẠO LAN TỎA VĂN HÓA HỌC ĐƯỜNG SINH VIÊN UNETI” – LẦN THỨ I, 2025<br>
+      <a href="Event/Cong_bo_Y_tuong_sang_tao_lan_toa_VHHD_2025_Lan_1.html" style="text-decoration: none;"><img src="Image/News/Y_Tuong_Sang_Tao_Mua_1_Cong_Bo.jpg" alt="Ý TƯỞNG SÁNG TẠO LAN TỎA VĂN HÓA HỌC ĐƯỜNG SINH VIÊN UNETI" style="max-width: 150px; height: 100%; max-height: 150px; display: block; margin-left: auto; margin-right: auto;"><br>CÔNG BỐ KẾT QUẢ – CUỘC THI “Ý TƯỞNG SÁNG TẠO LAN TỎA VĂN HÓA HỌC ĐƯỜNG SINH VIÊN UNETI” – LẦN THỨ I, 2025<br>
     <p style="font-size: 12px;"><b>Ngày đăng: 28/11/2025</b></p>
     </a>
   </td>
