--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <section id="announcements">
   <h2>Thông báo CLB</h2>
-    <div class="activites">
+    <div class="activites" >
       <div class="announcements-card">
         <h3>⌛ THÔNG BÁO BẢO TRÌ TRANG WEBSITE CLB ⌛</h3>
         <p style="text-align: left;">
@@ -124,10 +124,10 @@
     </div>
     </div>
     <div class="activites">
-      <div class="announcements-card">
+      <a href="Event/Happy_Birthday_Chi_Pham_Minh_Chau_2025.html" class="announcements-card" style="text-decoration: none; color: white;">
         <h3>[10/12/2025]🎂Chúc mừng sinh nhật chị Phạm Minh Châu - Phó phụ trách CLB🎂</h3>
             <img src="Image/PhamMinhChau.jpg" style="width: 100%; max-width: 500px;">
-    </div>
+      </a>
     </div>
 </section>
 
