--- a/News.html
+++ b/News.html
@@ -121,9 +121,12 @@
   </td>
   </tr>
   <tr>
-    <td><img src="Image/News/Hoi_Thao_Cong_Doan_NB_2025.jpg" alt="HỘI THAO CÔNG ĐOÀN NINH BÌNH 2025" style="max-width: 150px; height: 100%; max-height: 150px; display: block; margin-left: auto; margin-right: auto;"><br>
+    <td>
+    <a href="Event/Hoi_Thao_SV_NB_2025.html" style="text-decoration: none;"> 
+    <img src="Image/News/Hoi_Thao_Cong_Doan_NB_2025.jpg" alt="HỘI THAO CÔNG ĐOÀN NINH BÌNH 2025" style="max-width: 150px; height: 100%; max-height: 150px; display: block; margin-left: auto; margin-right: auto;"><br>
     RECAP | HỖ TRỢ CHƯƠNG TRÌNH "CHUNG KẾT & BẾ MẠC HỘI THAO SINH VIÊN 2025 – CƠ SỞ NINH BÌNH"<br>
     <p style="font-size: 12px;"><b>Ngày đăng: 01/12/2025</b></p>
+    </a> 
     </td>
   </tr>  
   <tr>
