--- a/Member.html
+++ b/Member.html
@@ -55,16 +55,16 @@
           <img src="Image\MemberVuTheAnh.jpg" alt="Vũ Thế Anh" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Vũ Thế Anh - Lớp DHKM17A1HN</p>
       </a>
-      <div class="role-card">
+      <a href="Member/Trinh_Ngoc_Cong.html" style="text-decoration: none;" class="role-card">
         <h3>Phó ban Tuyên truyền & Thực hiện VHHD</h3>
           <img src="Image\MemberTrinhNgocCong.jpg" alt="Trịnh Ngọc Công" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Trịnh Ngọc Công - Lớp DHDI17A1CL</p>
-      </div>
-      <div class="role-card">
+      </a>
+      <a href="Member/Pham_Thi_Trang.html" style="text-decoration: none;" class="role-card">
         <h3>Phó ban Tuyên truyền & Thực hiện VHHD</h3>
           <img src="Image\MemberPhamThiTrang.jpg" alt="Phạm Thị Trang" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Phạm Thị Trang - Lớp DHDL16A1HN</p>
-      </div>
+      </a>
     </div>
 
     <div class="role">
@@ -139,10 +139,10 @@ Tiktok: <a href="https://tiktok.com/@uneti.clb.scc" target="_blank">https://tikt
   <center><p>📞Hotline: 02432336137</p></center>
   <center><p>🌐Website Trường: <a href="https://uneti.edu.vn" target="_blank">https://uneti.edu.vn</a></p></center>
 <br>
-  <footer>
-    2025 © Trường Đại học Kinh tế - Kỹ thuật Công nghiệp | All rights reserved.<br>
-    2025 © CLB Tuyên truyền Văn hóa học đường Sinh viên
-  </footer>
+<footer style="text-align:center; margin-top:20px;">
+  2025 © Trường Đại học Kinh tế - Kỹ thuật Công nghiệp | All rights reserved.<br>
+  2025 © CLB Tuyên truyền Văn hóa học đường Sinh viên
+</footer>
 </body>
 <script src="script.js"></script>
 </html>
