--- a/VHHD.html
+++ b/VHHD.html
@@ -140,10 +140,10 @@ Tiktok: <a href="https://tiktok.com/@uneti.clb.scc" target="_blank">https://tikt
   <center><p>📞Hotline: 02432336137</p></center>
   <center><p>🌐Website Trường: <a href="https://uneti.edu.vn" target="_blank">https://uneti.edu.vn</a></p></center>
 <br>
-  <footer>
-    2025 © Trường Đại học Kinh tế - Kỹ thuật Công nghiệp | All rights reserved.<br>
-    2025 © CLB Tuyên truyền Văn hóa học đường Sinh viên
-  </footer>
+<footer style="text-align:center; margin-top:20px;">
+  2025 © Trường Đại học Kinh tế - Kỹ thuật Công nghiệp | All rights reserved.<br>
+  2025 © CLB Tuyên truyền Văn hóa học đường Sinh viên
+</footer>
 </body>
 <script src="script.js"></script>
 </html>
