--- a/Member.html
+++ b/Member.html
@@ -68,11 +68,11 @@
     </div>
 
     <div class="role">
-      <div class="role-card">
+      <a href="Member/Nguyen_To_Chinh.html" style="text-decoration: none; " class="role-card">
         <h3>Trưởng ban Phát thanh</h3>
           <img src="Image\MemberNguyenToChinh.jpg" alt="Nguyễn Tố Chinh" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Nguyễn Tố Chinh - Lớp DHQT16A4HN</p>
-      </div>
+      </a>
         <a href="Member/Vu_Thi_Thu.html" style="text-decoration: none; " class="role-card">
         <h3>Trưởng ban Truyền thông</h3>
           <img src="Image\MemberVuThiThu.jpg" alt="Vũ Thị Thu" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
