--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </nav>
     <div class="header--marquee">
       <marquee scrollamount="8" direction="left" align="center" style="font-weight: bold; padding: 3px; color: red;">
-        CHÀO MỪNG ĐẠI HỘI CÔNG ĐOÀN TRƯỜNG ĐẠI HỌC KINH TẾ – KỸ THUẬT CÔNG NGHIỆP - CƠ SỞ HÀ NỘI, LẦN THỨ XII, NHIỆM KỲ 2025 - 2030&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CLB Tuyên truyền Văn hóa học đường Sinh viên UNETI đang cố gắng hoàn thành xuất sắc nhiệm vụ Đoàn TNCS Hồ Chí Minh - UNETI năm học 2025-2026
+        Văn hóa học đường Sinh viên UNETI luôn là tiềm năng lớn của Trường Đại học Kinh tế - Kỹ thuật Công Nghiệp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CLB Tuyên truyền Văn hóa học đường Sinh viên UNETI đang cố gắng hoàn thành xuất sắc nhiệm vụ Đoàn TNCS Hồ Chí Minh - UNETI năm học 2025-2026
 </marquee>
   <header>
     <h1>CLB Tuyên truyền Văn hóa học đường Sinh viên</h1>
@@ -116,10 +116,11 @@
             - Cập nhật tin tức mới nhất<br>
             - Thêm những tin tức cũ<br>
             - Sửa lỗi<br>
+            - Thêm nội dung "CHUẨN MỰC TRONG ỨNG XỬ, CHUYÊN NGHIỆP TRONG HÀNH CHÍNH" tại trang [Văn hoá học đường sinh viên]
             - Còn nhiều cái nữa đang đề cập đến!<br>
             Trân trọng cảm ơn và theo dõi!<p>
             <p><b>Bởi: Trần Đặng Bình Minh (Nhà sáng lập website) và Trần Danh Quang (Ban Truyền Thông)</b></p>
-            <p style="font-size: 12px;">Ngày bảo trì: 10/12/2025</p>
+            <p style="font-size: 12px;">Ngày thông báo bảo trì: 14/12/2025</p>
         </p>
     </div>
     </div>
@@ -135,10 +136,10 @@
   </tr>
   <tr>
     <td style="max-width:800px;">
-      <a href="Event/Giot_Hong_UNETI_2025_Lan_2.html" style="text-decoration: none; text-align: centre;">
-      <img src="Image/News/UB_2025_Lan_2_NB_5.jpg" style="width: 100%; max-width: 500px;">
+      <a href="Event/Ho_tro_Trang_tri_Giang_sinh_2025.html" style="text-decoration: none; text-align: centre;">
+      <img src="Image/News/Trang_tri_giang_sinh_2025_1.jpg" style="width: 100%; max-width: 500px;">
       <br>
-      RECAP | HỖ TRỢ HỘI HIẾN MÁU TÌNH NGUYỆN "GIỌI HỒNG UNETI" 2025 LẦN 2 TẠI NINH BÌNH
+      RECAP | 🎄✨Hỗ trợ trang trí Noel tại ngôi trường UNETI!🌟
       </a>
     </td>
   </tr>
@@ -146,6 +147,11 @@
     <th>Các sự kiện nổi bật khác</th>
   </tr>
     <td><a href="Event/Chu_nhat_xanh_UNETI_T12_2025.html" style="text-decoration: none;">CHỦ NHẬT XANH - HÀNH ĐỘNG NHANH - MÔI TRƯỜNG SẠCH CÙNG CLB TUYÊN TRUYỀN VĂN HOÁ HỌC ĐƯỜNG SINH VIÊN
+    </a>
+    </td>
+  </tr>
+  </tr>
+    <td><a href="Event/Giot_Hong_UNETI_2025_Lan_2.html" style="text-decoration: none;">RECAP | HỖ TRỢ HỘI HIẾN MÁU TÌNH NGUYỆN "GIỌI HỒNG UNETI" 2025 LẦN 2 TẠI CƠ SỞ NINH BÌNH
     </a>
     </td>
   </tr>
@@ -165,11 +171,6 @@
     <td><a href="Event/Sinh_hoat_dau_T12_2025.html" style="text-decoration: none;">RECAP | BUỔI HỌP CLB ĐẦU THÁNG 12 NĂM 2025 VÀ TỔ CHỨC SINH NHẬT THÀNH VIÊN THÁNG 12</td>
     </a>
     </tr>
-  <tr>
-    <td><a href="Event/Kien_thuc_PL_ANTT_TNXH.html" style="text-decoration: none;">RECAP | HỖ TRỢ HỘI THẢO "PHỔ BIẾN, TUYÊN TRUYỀN NÓI TRUYỆN CHUYÊN ĐỀ VỀ KIẾN THỨC PHÁP LUẬT, AN NINH TRẬT TỰ, TỆ NẠN XÃ HỘI"
-      </a>
-    </td>
-  </tr>
 </table>
   </div>
 </section>
