--- a/Member.html
+++ b/Member.html
@@ -91,13 +91,60 @@
           <img src="Image\MemberVuongThiThuy.jpg" alt="Vương Thị Thuý" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Vương Thị Thuý - Lớp DHKT17A8HN</p>
       </div>
-      <div class="role-card">
+      <a href="Member/Nguyen_Thi_Nguyet_Minh.html" style="text-decoration: none; " class="role-card">
         <h3>Thủ Quỹ</h3>
           <img src="Image\MemberNguyenThiNguyetMinh.jpg" alt="Nguyễn Thị Nguyệt Minh" style="vertical-align: center; width: 100%; height: auto; max-width: 400px;">       
         <p>Nguyễn Thị Nguyệt Minh - Lớp DHDT17A1HN</p>
+      </a>
+    </div>
+
+  </section>
+
+<section id="leader" data-aos="fade-up" style="margin: 0 50px;">
+    <h2>Phó trưởng ban Gen 3 (2024 - 2025) [Đang cập nhật!]</h2>
+    <div class="role">
+      <div class="role-card">
+        <h3>Chủ nghiệm</h3>
+        <p>Phan Văn Hồng Phúc - DHDI15A3HN</p>
+      </div>
+      <div class="role-card">
+        <h3>Phó Chủ nghiệm</h3>
+        <p>(TBA)</p>
+      </div>
+      <div class="role-card">
+        <h3>Phó Chủ nghiệm</h3>
+        <p>(TBA)</p>
       </div>
     </div>
-  </section>
+    <div class="role">
+      <div class="role-card">
+        <h3>Trưởng ban Tuyên truyền & Thực hiện VHHD</h3>
+        <p>(TBA)</p>
+      </div>
+      <div class="role-card">
+        <h3>Phó ban Tuyên truyền & Thực hiện VHHD</h3>
+        <p>Đỗ Thuỳ Trang - DHTN15A10HN</p>
+      </div>
+      <div class="role-card">
+        <h3>Phó ban Tuyên truyền & Thực hiện VHHD</h3>
+        <p>(TBA)</p>
+      </div>
+    </div>
+    <div class="role">
+      <div class="role-card">
+        <h3>Trưởng ban Phát Thanh</h3>
+        <p>Trần Thị Quốc Khánh - DHMA15A1CL</p>
+      </div>
+      <div class="role-card">
+        <h3>Trưởng ban Truyền thông</h3>
+        <p>Nguyễn Thanh Diệp - DHTI15A5HN</p>
+      </div>
+      <div class="role-card">
+        <h3>Phó ban Truyền thông</h3>
+        <p>(TBA)</p>
+      </div>
+    </div>
+</section>
 
 <section id="leader" data-aos="fade-up" style="margin: 0 50px;">
     <h2>Cán bộ - Thầy Cô Phụ Trách</h2>
@@ -141,4 +188,3 @@ Tiktok: <a href="https://tiktok.com/@uneti.clb.scc" target="_blank">https://tikt
 </body>
 <script src="script.js"></script>
 </html>
-
