--- a/Member/Pham_Thi_Ngoc_Lan.html
+++ b/Member/Pham_Thi_Ngoc_Lan.html
@@ -27,30 +27,30 @@
 <p style="text-align: center;"><a href="../index.html" style="color: black;">Trang chủ</a> >> <a href="../Member.html" style="color: black;">Thành viên</a></p>
 <header>
   <h1 style="text-align:center;">
-    Phó chủ nghiệm CLB (Ninh Bình): Phạm Thị Ngọc Lan - DHMA16A2ND 
+    Phó chủ nghiệm CLB (Ninh Bình):<br>Phạm Thị Ngọc Lan - DHMA16A2ND 
   </h1>
   <p>Một tấm gương sáng trong CLB Tuyên truyền và thực hiện Văn hóa học đường sinh viên</p>
 </header>
 <section style="text-align: center; margin: 0 50px;">
-<img src="../Image/MemberPhamThiNgocLan.jpg" alt="Ảnh đại diện" style="width: 100%; max-width: 500px; height: auto;"><br>
+<img src="../Image/MemberPhamThiNgocLan.jpg" alt="Ảnh đại diện" style="width: 100%; max-width: 500px; height: auto;"><br><br>
   <p style="margin:0 50px; text-align: justify;">
     <p style="text-align: justify;">Phạm Thị Ngọc Lan – cô gái đến từ mảnh đất Thái Bình cũ (Hưng Yên hiện nay) thân thương, hiện đang là lớp trưởng lớp DHMA16A2ND, Khoa Dệt may và Thời trang tại Trường Đại học Kinh tế – Kỹ thuật Công nghiệp, với niềm đam mê học hỏi không ngừng, Phạm Thị Ngọc Lan đã trở thành tấm gương tiêu biểu trong học tập; nhiệt huyết, năng động trong các hoạt động phong trào của Nhà trường.</p><br>
-    <img src="../Image/MemberBackground/PhamThiNgocLan1.jpg" style="width: 100%; max-width: 500px; height: auto;">
+    <img src="../Image/MemberBackground/PhamThiNgocLan1.jpg" style="width: 100%; max-width: 500px; height: auto;"><br><br>
     <p style="text-align: justify;">Là lớp trưởng gương mẫu, luôn hoàn thành xuất sắc nhiệm vụ Nhà trường giao phó. Đồng thời cũng là một Phó trưởng ban tuyên truyền và thực hiện Văn hóa Học đường kiêm phụ trách cơ sở Ninh Bình của câu lạc bộ, Phạm Thị Ngọc Lan luôn ý thức rõ vai trò và trách nhiệm của mình đối với tập thể, cùng với sự cố gắng không ngừng trong học tập, ngay từ khi còn là sinh viên năm nhất Phạm Thị Ngọc Lan đã liên tiếp nhận được học bổng khuyến khích học tập từ Nhà Trường, điểm học tập của Ngọc Lan xếp loại giỏi và luôn trong top của Khoa cũng như là lá cờ đầu trong phong trào hoạt động của lớp.</p><br>
-    <img src="../Image/MemberBackground/PhamThiNgocLan2.png" style="width: 100%; max-width: 500px; height: auto;">
+    <img src="../Image/MemberBackground/PhamThiNgocLan2.png" style="width: 100%; max-width: 500px; height: auto;"><br><br>
     <p style="text-align: justify;">Không chỉ nỗ lực trong học tập, Phạm Thị Ngọc Lan còn là một cán bộ lớp gương mẫu, luôn đi đầu trong mọi hoạt động của Khoa, của Nhà trường và cũng như của Câu lạc bộ.</p><br>
-    <img src="../Image/MemberBackground/PhamThiNgocLan3.png" style="width: 100%; max-width: 500px; height: auto;">
+    <img src="../Image/MemberBackground/PhamThiNgocLan3.png" style="width: 100%; max-width: 500px; height: auto;"><br><br>
     <p style="text-align: justify;">Phạm Thị Ngọc Lan là một trong những thành viên tiêu biểu của câu lạc bộ Tuyên truyền Văn hóa học đường Sinh viên, với sự nhiệt tình, năng nổ, tích cực và đầy trách nhiệm của bạn cùng câu lạc bộ Tuyên truyền Văn hoá Học đường Sinh viên, đã góp phần hoàn thành xuất sắc nhiệm vụ triển khai công tác tuyên truyền, nhắc nhở, hướng dẫn và đôn đốc sinh viên thực hiện tốt 5S như đeo thẻ sinh viên đầy đủ khi đến trường, xây dựng nếp sống văn hóa học đường, từ đó góp phần bước đầu ghi dấu thành công của Phòng Chính trị và Công tác sinh viên, Đoàn Thanh niên – Hội Sinh viên, các Khoa, trung tâm và phòng chức năng, được Đảng uỷ, Ban Giám hiệu Nhà trường ghi nhận và đánh giá cao.</p><br>
     <img src="../Image/MemberBackground/PhamThiNgocLan4.jpg" style="width: 100%; max-width: 500px; height: auto;">
     <img src="../Image/MemberBackground/PhamThiNgocLan5.png" style="width: 100%; max-width: 500px; height: auto;">
-    <img src="../Image/MemberBackground/PhamThiNgocLan6.png" style="width: 100%; max-width: 500px; height: auto;">
+    <img src="../Image/MemberBackground/PhamThiNgocLan6.png" style="width: 100%; max-width: 500px; height: auto;"><br><br>
     <p style="text-align: justify;">Sinh viên Phạm Thị Ngọc Lan có đôi lời chia sẻ: <i>“Em tham gia CLB từ khi mới vào trường, đến thời điểm hiện tại, 5S & VHHĐ sinh viên đã lan rộng và đón nhận được rất nhiều sự quan tâm từ các bạn sinh viên và các Thầy cô, Em rất vui và tự hào khi mình là những người trong đội tiên phong 5S & VHHD, là thành viên của ban tuyên truyền và thực hiện văn hóa học đường, việc thực hiện 5S & VHHD giúp chúng em thể hiện mình là sinh viên UNETI chuẩn chỉ hơn và cảm thấy nâng niu, trân trọng chiếc thẻ sinh viên hơn mỗi khi đến trường, cũng như khẳng định rằng sinh viên UNETI có những chiếc thẻ rất đẹp, quần áo ngay ngắn, gọn gàng, lịch sự, Em cũng mong các bạn sinh viên sẽ thực hiện tốt hơn để góp phần nâng cao sự phát triển mái Nhà chung UNETI.”</i></p><br>
     <p style="text-align: justify;">Bên cạnh đó, Phạm Thị Ngọc Lan cũng không ngần ngại tham gia nhiều hoạt động lớn khác của Trường như: Tham gia Chiến dịch “Mùa hè xanh UNETI 2023”; Tham gia dâng hoa lễ thắp nến tri ân các anh hùng liệt sĩ trong chiến dịch “Mùa hè xanh” tại xã Nghĩa Đồng, huyện Nghĩa Hưng, tỉnh Nam Định; Tham gia truyền thông tuyển sinh 2024…</p><br>
     <img src="../Image/MemberBackground/PhamThiNgocLan7.jpg" style="width: 100%; max-width: 500px; height: auto;">
     <img src="../Image/MemberBackground/PhamThiNgocLan8.png" style="width: 100%; max-width: 500px; height: auto;">
-    <img src="../Image/MemberBackground/PhamThiNgocLan9.jpg" style="width: 100%; max-width: 500px; height: auto;">
+    <img src="../Image/MemberBackground/PhamThiNgocLan9.jpg" style="width: 100%; max-width: 500px; height: auto;"><br><br>
     <p style="text-align: justify;">Với sự cống hiến, tinh thần nhiệt huyết của tuổi trẻ trong các hoạt động phong trào Đoàn thể, Phạm Thị Ngọc Lan đã vinh dự được Đoàn trường xét tặng đạt danh hiệu “Sinh viên 5 tốt cấp Trường năm 2023”.</p><br>
-    <img src="../Image/MemberBackground/PhamThiNgocLan10.png" style="width: 100%; max-width: 500px; height: auto;">
+    <img src="../Image/MemberBackground/PhamThiNgocLan10.png" style="width: 100%; max-width: 500px; height: auto;"><br><br>
     <p style="text-align: justify;">Hy vọng rằng những thành tích của Phạm Thị Ngọc Lan sẽ trở thành nguồn động lực cho tất cả sinh viên đang theo học tại Trường Đại học Kinh tế – Kỹ thuật Công nghiệp, niềm đam mê, lòng nhiệt huyết, và tinh thần trách nhiệm sẽ tiếp tục lan tỏa trong tâm hồn cô sinh viên này trong suốt quá trình học tập tại Khoa Dệt may và Thời trang, để tạo nên những kỷ niệm không thể nào quên dưới mái trường UNETI. Đồng thời, cũng mong rằng những sự đóng góp của Phạm Thị Ngọc Lan sẽ truyền cảm hứng cho các thành viên của câu lạc bộ Tuyên truyền Văn hóa học đường Sinh viên cũng như sinh viên toàn trường, thúc đẩy họ tiếp tục phát triển và lan tỏa những giá trị tốt đẹp, thực hiện tốt 5S & VHHĐ để góp phần nâng cao phát triển mái nhà chung UNETI.</p><br>
 </p>
 </section>
